# lspc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/clspc/: inspect.h  jdtls.h  lsp_types.h  semantic.h  service.h  session.h  source_window.h  uri.h  workspace_manager.h
src/: inspect.cpp  jdtls_paths.cpp  semantic.cpp  service.cpp  session.cpp  source_window.cpp  uri.cpp  workspace_manager.cpp
tests/: integ_test_helper.h  run_integ_test_spawn_jdtls.sh  run_test.sh  test_helper.h  test_jdtls_paths.cpp  test_jdtls_real_spawn.cpp  test_semantic_expand_incoming.cpp  test_session_call_hierarchy.cpp  test_session_call_hierarchy_real.cpp  test_session_definition.cpp  test_session_document_symbols_real.cpp  test_session_document_sync.cpp  test_session_initialize_real.cpp  test_session_outgoing_calls_real.cpp  test_source_window.cpp  test_uri.cpp
tools/: clspc_mcp_smoke.cpp  dep_expand_demo.cpp  dep_expand_demo2.cpp
